# pop-pay-python

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  README.pypi_redirect.md  README.zh-TW.md  SECURITY.md  build_ext.py  glama.json  llms-install.md  pyproject.toml  setup_cython.py  smithery.yaml
.github/workflows/: build-wheels.yml
aegis/: __init__.py  mcp_server.py
aegis/providers/: stripe_real.py
config/: doctor-remediation.yaml
dashboard/: dashboard.js  index.html  server.py
docs/: CATEGORIES_COOKBOOK.md  CATEGORIES_DECISION_CRITERIA.md  CROSS_PROCESS_SETUP.md  DOCTOR.md  ERROR_CODES.md  GUARDRAIL_BENCHMARK.md  HALL_OF_FAME.md  INTEGRATION_GUIDE.md  INTEGRATION_GUIDE.zh-TW.md  THREAT_MODEL.md  VAULT_THREAT_MODEL.md  openclaw-skill.md
docs/benchmark-history/: prompt-iterations.md
docs/internal/: README.md  agent-commerce-threat-model.md  known-limitations.md  py-security-history.md  red-team-methodology.md  vault-gaps.md
examples/: agent_vault_flow.py  e2e_demo.py
examples/vault-challenge/: README.md  gen-challenge.js  gen-challenge.py  vault.enc.challenge  vault.enc.challenge.meta.json
pop-pay-skill/: SKILL.md  _meta.json
pop_pay/: cli.py  cli_doctor.py  cli_unlock.py  cli_vault.py  client.py  doctor_f9.py  errors.py  injector.py  mcp_server.py  transport.py  vault.py
pop_pay/core/: models.py  secret_str.py  state.py
pop_pay/data/: chrome_known_good_sha256.json
pop_pay/engine/: guardrails.py  llm_guardrails.py
pop_pay/providers/: byoc_local.py  stripe_mock.py  stripe_real.py
pop_pay/tools/: langchain.py
scripts/: build_pypi_readme.py  demo_cdp_injection.py  test_llm_guardrails.py  walkthrough-f6a.sh
tests/: test_audit_and_migration.py  test_cli_doctor_f9.py  test_guardrails.py  test_integration.py  test_models.py  test_p0_fixes.py  test_passphrase_vault.py  test_providers.py  test_rename_smoke.py  test_secret_str.py  test_stripe_real.py  test_transport.py  test_v03_features.py  test_vault.py  test_vault_f13_format.py
tests/fixtures/: dummy_checkout.html
tests/redteam/: README.md  aggregator.py  run_corpus.py  sync_corpus.py  test_redteam.py  validate_corpus.py
tests/redteam/corpus/: attacks.json
tests/redteam/runners/: full_mcp.py  hybrid.py  layer1.py  layer2.py  toctou.py
tests/redteam/runs/: 2026-04-14T20-59-17-B.jsonl  ts-keyed-2026-04-14T22-08-53-704Z.jsonl
