[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pop-pay"
version = "0.5.7"
description = "Point One Percent - Semantic Payment Guardrail for AI Agents. it only takes 0.1% of Hallucination to drain 100% of your wallet."
authors = [{name="Point One Percent Team"}]
dynamic = ["readme"]
license = {text="MIT"}
requires-python = ">=3.10"
dependencies = [
    "pydantic",
    "python-dotenv",
]

[project.optional-dependencies]
llm = ["openai", "tenacity>=9.1.4"]
stripe = ["stripe"]
langchain = ["langchain-core"]
mcp = ["mcp>=1.26.0"]
dashboard = ["streamlit>=1.55.0"]
dev = ["pytest", "pytest-asyncio"]
browser = ["playwright>=1.40.0"]
all = ["pop-pay[llm,stripe,langchain,mcp,dashboard,browser]"]

[project.scripts]
pop-launch = "pop_pay.cli:main"

[tool.hatch.metadata.hooks.custom]
path = "hatch_build.py"

[tool.hatch.build.targets.wheel]
packages = ["pop_pay"]

[dependency-groups]
dev = [
    "vulture>=2.15",
]
