[build-system]
requires = ["hatchling", "cython>=3.0", "setuptools"]
build-backend = "hatchling.build"

[project]
name = "pop-pay"
version = "0.6.28"
description = "Point One Percent - Semantic Payment Guardrail for AI Agents. it only takes 0.1% of Hallucination to drain 100% of your wallet."
authors = [{name="Point One Percent Team"}]
dynamic = ["readme"]
license = {text="MIT"}
requires-python = ">=3.10"
dependencies = [
    "cryptography>=46.0.5",
    "pydantic",
    "python-dotenv",
]

[project.optional-dependencies]
llm = ["openai", "tenacity>=9.1.4"]
stripe = ["stripe"]
langchain = ["langchain-core"]
mcp = ["mcp>=1.26.0"]
dashboard = ["streamlit>=1.55.0"]
dev = ["pytest", "pytest-asyncio"]
browser = ["playwright>=1.40.0"]
vault = ["cryptography"]
passphrase = ["keyring"]
all = ["pop-pay[llm,stripe,langchain,mcp,dashboard,browser,vault,passphrase]"]

[project.scripts]
pop-launch = "pop_pay.cli:main"
pop-init-vault = "pop_pay.cli_vault:cmd_init_vault"
pop-unlock = "pop_pay.cli_unlock:cmd_unlock"

[tool.setuptools.dynamic]
readme = {file = "README.md"}

[tool.hatch.metadata.hooks.custom]
path = "hatch_build.py"

[tool.hatch.build.targets.wheel]
packages = ["pop_pay"]
artifacts = ["pop_pay/**/*.so", "pop_pay/**/*.pyd"]

[tool.hatch.build.hooks.custom]
path = "build_ext.py"

# [tool.cython] — Cython build process notes:
# - pop_pay/engine/_vault_core.pyx is compiled via setup_cython.py (invoked by build_ext.py)
# - The POP_VAULT_COMPILED_SALT env var (GitHub Actions secret) is injected into _vault_core.pyx
#   before compilation, then restored. This keeps the secret out of the repo.
# - Source/OSS builds compile with _COMPILED_SALT = None and fall back to the public salt.
# - cibuildwheel (build-wheels.yml) builds platform wheels for Linux, macOS, and Windows.

[dependency-groups]
dev = [
    "cython>=3.2.4",
    "setuptools>=82.0.1",
    "vulture>=2.15",
]
